style: fix projects gallery alignment

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -8,6 +8,6 @@
 }
 .uk-card-body {
     padding: 30px !important;
-    height: 250px;
+    height: 300px;
 }
 
